removed getting device by barcode, can get as scannable
